Add Permission v2 Example Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">AappZ Sample</string>
+
+    <!--Permission Example-->
+    <string name="single">Single</string>
+    <string name="multiple">Multiple</string>
+    <string name="customized">Customized</string>
+    <string name="app_settings">App Settings</string>
 </resources>
