Add Bounce Example with onClickBounce

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="multiple">Multiple</string>
     <string name="customized">Customized</string>
     <string name="app_settings">App Settings</string>
+    <string name="show_bounce">Show Bounce</string>
 </resources>
