--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="customized">Customized</string>
     <string name="app_settings">App Settings</string>
     <string name="show_bounce">Show Bounce</string>
+    <string name="show_loading">Show Loading</string>
 </resources>
